--- a/Azmoonak/Areas/Admin/Views/Panel/Details.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/Details.cshtml
@@ -5,58 +5,58 @@
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
-<h1>Details</h1>
 
 <div>
-    <h4 id="edit-mode" class="text-center text-white rounded-3 p-1" hidden></h4>
+    <h4 id="edit-mode" class="text-center text-white rounded-3 p-1 mt-3" hidden></h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.LName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.LName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Mobile)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Mobile)
         </dd>
-        <dt class = "col-sm-2">
+@*         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Password)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Password)
-        </dd>
-@*         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Code)
+        </dd> *@
+        @*         <dt class = "col-sm-2">
+        @Html.DisplayNameFor(model => model.Code)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Code)
+        @Html.DisplayFor(model => model.Code)
         </dd> *@
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IsActive)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Role)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Role.RoleName)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="EditUser" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="EditUser" asp-route-id="@Model?.Id" class="btn btn-warning">Edit</a> |
+    <a class="text-decoration-none btn btn-danger text-white" asp-action="Index">Back to List</a>
 </div>
 
 
