--- a/Azmoonak/Areas/Admin/Views/Panel/EditUser.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/EditUser.cshtml
@@ -24,9 +24,9 @@
                 <input asp-for="Mobile" class="form-control border-black border-4" />
                 <span asp-validation-for="Mobile" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control border-black border-4" />
+                <input asp-for="Password" class="form-control border-black bg-danger border-4" readonly  hidden/>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
