--- a/Azmoonak/Areas/Admin/Views/Panel/GetUsers.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Panel/GetUsers.cshtml
@@ -72,7 +72,7 @@
                     @Html.DisplayFor(modelItem => item.IsActive)
                 </td>
                 <td >
-                    <a asp-area="admin" asp-controller="panel" asp-action="EditUser" asp-route-id="@item.Id" class="btn btn-warning"><span class="fa fa-lg fa-edit"></span> ویرایش</a>
+                    <a asp-area="admin" asp-controller="panel" asp-action="EditUser" asp-route-id="@item.Id" class="btn btn-warning"><span class="fa fa-lg fa-edit"></span> ویرایش پروفایل</a>
                     <a asp-area="admin" asp-controller="panel" asp-action="GetUserCertificate" asp-route-id="@item.Id" class="btn btn-info"><span class="fa fa-lg fa-file-text-o"></span> کارنامه ها</a>
                     @* <a asp-action="Details" asp-route-id="@item.Id" class=" btn btn-info"><span class="fa fa-info"></span></a> *@
                     <a data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="Delete('@(item.Id)')" class="btn btn-danger"><span class="fa fa-trash-o"></span></a>
